# gaiinsights

./: CLAUDE.md  articles.db  config.yaml  documentation.txt  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  replit.nix  tsconfig.json
.streamlit/: config.toml
agents/: evaluation_agent.py  rationale_agent.py  search_agent.py
attached_assets/: Pasted--UPDATED-AI-News-Aggregation-and-Evaluation-System-PRD-DTS-1-Introduction-Goals-Combi-1737638134468.txt  ai_news_report (5).csv  best practice.txt  search_sites.csv
data/: search_sites.csv  test_urls.csv
data/criteria/: default_criteria.txt
old/: .replit  config.yaml  main.py  pyproject.toml
old/agents/: criteria_agent.py  rationale_agent.py  review_agent.py
old/attached_assets/: Pasted-INFO-main-Initializing-session-state-INFO-main-Session-state-initialized-successfully-INFO-1738062784673.txt  search_sites.csv
old/data/: test_urls.csv
old/reports/: ai_news_report.csv
old/utils/: ai_analyzer.py  common.py  content_extractor.py  db_manager.py  document_parser.py  evaluation_tools.py  report_tools.py  search_context.py  search_tools.py  time_analysis.py
public/: gai-blank.pptx
reports/: ai_news_report.csv
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BuilderScreen.tsx  GeneratingToast.tsx  Header.tsx  LayoutPreview.tsx  LoginScreen.tsx  StudioScreen.tsx  TemplateUploader.tsx  types.ts
src/lib/: brand.ts  pptx-builder.ts  prompt-builder.ts  (+3 more)
utils/: ai_analyzer.py  clustering.py  content_extractor.py  evaluation_tools.py  report_tools.py  search_tools.py
(+6 files in other folders)
